（1）雪花算法生成id （2）增加返回结果封装 （3）增加注册接口 （4）修改vo上的validate
